# pretix-custom-plugins

./: .env.example  README.md  dev.sh  docker-compose.yml
.docker-dev/: dev_entrypoint.sh  pretix.cfg
pretix-auto-paid/: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
pretix-auto-paid/.github/workflows/: style.yml  tests.yml
pretix-auto-paid/pretix_auto_paid/: apps.py  signals.py
pretix-auto-paid/pretix_auto_paid/locale/de_Informal/LC_MESSAGES/: django.po
pretix-custom-js/: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  devenv.nix  devenv.yaml  docker-compose.yml  pretixplugin.toml  pyproject.toml  setup.cfg
pretix-custom-js/.docker-dev/: Dockerfile  dev_entrypoint.sh  pretix.cfg
pretix-custom-js/.github/workflows/: style.yml  tests.yml
pretix-custom-js/pretix_customjs/: apps.py  signals.py  urls.py  views.py
pretix-custom-js/pretix_customjs/invoice/: MyInvoiceRenderer.py  test.py
pretix-custom-js/pretix_customjs/templates/pretix_customjs/: presale_footer.html  settings.html
